--- a/SocialMediaPlatform/socual_media_home/templates/SocialMediaPlatform/home.html
+++ b/SocialMediaPlatform/socual_media_home/templates/SocialMediaPlatform/home.html
@@ -1,19 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'SocialMediaPlatform/base.html' %}
+
+
+{% block content %}
 
 <h1>My Home</h1>
 
-{% for post in posts  %}
+{% for post in posts %}
 
-<p>Auther: {{post.auther}}</p>
+<p>Auther: {{post.title}}</p>
 <h5>Content: {{post.content}}</h5>
 
 {% endfor %}
 
-</body>
-</html>
+
+{% endblock content%}
+
+{% block sidebar %}
+<button type="button" class="btn btn-secondary">Secondary</button>
+{% endblock sidebar%}
